# web3-storage-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
web3_storage_manager/: __main__.py
web3_storage_manager/core/: config.py
web3_storage_manager/db/: base.py  session.py
web3_storage_manager/db/migrations/: env.py
web3_storage_manager/db/migrations/versions/: 93c45b0b0f69_status_field_for_crust_order_model.py  a184d34a2914_add_filesize_field_to_content.py  a1becb6250d7_remove_user_model.py  d1722de59635_create_users_content_crust_order_models.py
web3_storage_manager/db/models/: content.py  crust_order.py  user.py
web3_storage_manager/services/: web3_uploader.py
web3_storage_manager/utils/: crust.py
web3_storage_manager/web/: __init__.py  api.py  dependencies.py
web3_storage_manager/web/endpoints/: content.py  users.py
web3_storage_manager/web/schemas/: content.py  user.py
